# elerium

./: .gitignore  .pre-commit-config.yaml  REUSE.toml  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
src/elerium/: __init__.py  cli.py  glyphview.py  mti_parser.py  otufo.py  svg.py  util.py
tests/: test_parse_gdef.py  test_parse_gpos.py  test_parse_gsub.py  test_parse_plist.py  test_util.py
tests/data/: chainedclass.txt  multiscriptlookup.txt  multisinglepos.txt  ooo_chaining.txt  twobacktracks.txt
tests/data/mti/: README.md  chainedcoverage.txt
tests/data/nototools/: README.md  chainsub1.txt  consub1.txt  consub2.txt
tests/data/plist/: Example GDEF.txt  Example GPOS.txt  Example GSUB.txt  Example.fea  Example.plist
tests/data/ufo/: README.md
tests/data/ufo/Testboreto.ufo/: features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist
tests/data/ufo/Testboreto.ufo/glyphs/: A_.glif  A_E_.glif  A_E_acute.glif  A_acute.glif  A_breve.glif  A_caron.glif  A_circumflex.glif  A_dieresis.glif  A_grave.glif  A_macron.glif  A_ogonek.glif  A_ring.glif  A_tilde.glif  B_.glif  C_.glif  C_R_.glif  C_acute.glif  C_caron.glif  C_cedilla.glif  C_circumflex.glif  C_dotaccent.glif  D_.glif  D_caron.glif  D_croat.glif  D_elta.glif  E_.glif  E_acute.glif  E_breve.glif  E_caron.glif  E_circumflex.glif  E_dieresis.glif  E_dotaccent.glif  E_grave.glif  E_macron.glif  E_ng.glif  E_ogonek.glif  E_th.glif  E_tilde.glif  E_uro.glif  E_uro.tf.glif  (+310 more)
